--- a/memoria/Capitulos/analtemporal.tex
+++ b/memoria/Capitulos/analtemporal.tex
@@ -36,8 +36,9 @@ En la última iteración queremos terminar la redacción de la documentación y 
 
 \subsection{Estimación vs Realidad}
 
-//TODO cambiar tabla
-\includegraphics[width=\textwidth]{img/cap4/analisistiempo.jpg}
+\includegraphics[width=\textwidth]{img/cap4/analisistiempo.png}\\
+
+Al haber eliminado diseños y probador (ver capítulo 6), se han reducido en parte las horas reales en el sprint 5. Sin embargo, debido a que hemos acabado realizando los tests en el sprint 6, así como a los distintos fallos de despliegue a los que nos hemos enfrentado, hemos tenido que dedicarle más tiempo del que pensábamos a dicho sprint, por lo que hemos contado con tiempo de margen y como se puede observar, no ha supuesto un problema respecto a la planificación.
 
 \clearpage
 
@@ -80,7 +81,7 @@ Además de esto para comunicarnos hemos usado nuestros teléfonos móviles, por 
 
 Finalmente, sumaremos todos los cálculos anteriores para dar una cifra al precio total:\\
 
-TODO TABLA TOTAL
+\includegraphics[width=\textwidth]{img/cap4/total.png}
 
 
 
