--- a/memoria/Capitulos/conclusiones.tex
+++ b/memoria/Capitulos/conclusiones.tex
@@ -1,8 +1,14 @@
 \chapter{Conclusiones y desarrollo futuro}\label{pruebas}
 
-\textbf{\large Conclusiones}\\
+La realización del proyecto ha sido muy enriquecedora, ya que nos ha permitido comprender el esfuerzo que conlleva realizar un trabajo desde cero: pasar por cada una de sus fases, desde que solo es una idea, pasando por la planificación, el desarrollo, y hasta que finalmente es un producto completo y la idea ha pasado a ser realidad. Todo esto, sumado a la cantidad de preparación que requiere realizar un diseño y un análisis preciso, así como la dificultad de formar a un equipo en un lenguaje desconocido, conforma un reto bastante interesante del que nos sentimos bastante orgullosos de haber participado y llevado a cabo hasta el final.\\
 
-TODO\\
+Durante todo el trascurso del proyecto, como era de esperar, nos hemos visto en la necesidad de tomar varias decisiones y afrontar varios problemas (como se ha podido ver en el capítulo 6). Sin embargo, no podríamos estar más contentos con todos estos fallos y problemas que hemos tenido, ya que es así como de verdad podemos aprender para intentar evitar los mismos fallos en el futuro. Porque al final, este proyecto no se basaba exclusivamente en realizar una aplicación, sino que una de los principales objetivos era formarnos en el proceso y ampliar nuestro conocimientos, y es por eso por lo que decidimos usar un framework que no habíamos utilizado nunca, así como otros lenguajes en los que no teníamos tanta experiencia, todo para que pudiéramos aprovechar al máximo el tiempo empleado y salir del proyecto con nuevos conocimientos para abrirnos fronteras.\\
+
+Y al final, eso es lo que hemos hecho, aprender. Aprender sobre el framework, sobre el lenguaje, sobre todo lo que necesitásemos para poder seguir adelante, y es algo que no hemos dejado de hacer durante toda la duración del proyecto. Sprint tras sprint descubríamos nuevas formas, mucho mas sencillas y eficientes, de abarcar los mismos problemas, y si a día de hoy (una vez finalizado el proyecto) echamos la vista hacia atrás, podemos ver todo lo que hemos aprendido desde que empezamos y el largo camino que hemos recorrido en algo menos de un año.\\
+
+Cabe mencionar que consideramos que el proyecto no ha quedado tan completo como lo habríamos deseado, ni mucho menos, pero aspirar a más hubiera sido un grave error teniendo en cuenta el tiempo que teníamos asignado. Aún queda mucho margen de mejora, y a medida que pase el tiempo y vayan saliendo nuevas actualizaciones para el juego, más herramientas y más características se podrán añadir a nuestra aplicación. Sin embargo, seguimos pensando que el resultado obtenido ha sido bastante bueno (y bastante cercano en la gran mayoría de sus aspectos a lo que en un principio se ideó).\\
+
+En resumen, no podríamos estar más satisfechos con el proyecto: tanto por el resultado que hemos acabado obteniendo, como por todo lo que hemos aprendido por el camino, sin duda ha sido una gran oportunidad para demostrar lo que hemos aprendido durante estos años de carrera, seguir formándonos y vernos cara a cara con un situación muy cercana a la realidad que sin duda nos será de gran ayuda para afrontar la siguiente etapa de nuestras vidas.\\
 
 \textbf{\large Desarrollo futuro}\\
 
