--- a/memoria/Capitulos/introduccion.tex
+++ b/memoria/Capitulos/introduccion.tex
@@ -1,7 +1,9 @@
 \chapter{Introducción}\label{introduccion}
 
-En Internet podemos encontrar gran cantidad de herramientas para calcular diferentes aspectos y datos del videojuego ``Animal Crossing: New Horizons". El problema recae en que muchas herramientas que podrían ser bastante útiles aún no han sido desarrolladas, así como la falta de un servicio web que las recoja a todas. Esto hace perder bastante tiempo a todos aquellos jugadores que deseen consultar ciertos datos, ya que tendrían que navegar por distintos sitios, en vez de disponer de todo lo que necesitan en un mismo lugar.\\
+En Internet podemos encontrar gran cantidad de herramientas para calcular diferentes aspectos y datos del videojuego \textit{``Animal Crossing: New Horizons”}. El problema recae en que muchas herramientas que podrían ser bastante útiles aún no han sido desarrolladas, así como la falta de un servicio web que recoja un compendio de las más importantes e interesantes. Esto hace perder bastante tiempo a todos aquellos jugadores que deseen consultar ciertos datos, ya que tendrían que navegar por distintos sitios, en vez de disponer de todo lo que necesitan en un mismo lugar.\\
 
-Debido a esto, llegamos a la decisión de crear una aplicación web que contenga una colección de herramientas, así como de desarrollar algunas nuevas por nuestra cuenta, todo esto con una interfaz simple que permita acceder a cada una sin ninguna dificultad.\\
+Debido a esto, llegamos a la decisión de crear una aplicación web que contenga una colección de herramientas, así como de desarrollar algunas nuevas por nuestra cuenta, todo esto con una interfaz simple que permita acceder a cada una sin ninguna dificultad, y además intentando quedarnos dentro de la estética ya propuesta por el juego.\\
 
-Nuestra aplicación web mostrará ciertos datos dependiendo de si pertenecemos al hemisferio norte o sur, de la hora actual, de la fecha en la que nos encontremos etc, por lo que podemos concluir con que el servicio se podrá utilizar de forma internacional, siempre y cuando se sepa la lengua española.
+En nuestra aplicación, el usuario tiene a su alcance una serie de herramientas pensadas para los distintos ámbitos del juego: tareas personalizables diarias, un calendario para no perderse los posibles eventos del juego, una forma de predecir el mercado, un álbum de fotos personal, varios catálogos que cubren todo lo que el jugador puede encontrar en el juego, así como una forma para catalogar los ítems y disponer de una colección personal, etc.\\
+
+Las herramientas y posibilidades son tan extensas que no podemos agruparlas todas, pero sí que podemos realizar un conjunto de las más importantes y de aquellas que le serán de más utilidad al usuario, y eso es lo que hemos hecho. Pensamos que es una aplicación muy útil, bastante ampliable de cara al futuro (ya que el juego sigue actualizándose con nuevo contenido), y que puede ser de gran ayuda para muchas personas que a día de hoy sigan jugando al juego.\\
