--- a/memoria/agradecimientos.tex
+++ b/memoria/agradecimientos.tex
@@ -1,3 +1,17 @@
 \cdpchapter{Agradecimientos}
 
-TODO=========================================
+Gran parte de este proyecto no hubiese sido posible sin herramientas y artefactos generados por otras personas que, como nosotros, también comparten la afición por este juego. A continuación se cita a aquellos usuarios que nos han proporcionado dichos artefactos.
+
+\begin{itemize}
+	\item Purplepixel: Iconos de Kamilo y Gullivarrr
+	\item Mattlewis92: Angular Calendar
+	\item Norviah: Animal Crossing NPM Database
+	\item Alexis8717: Hoja de cálculo de Animal Crossing: New Horizons
+	\item MarkNickerson: Iconos para el logo de la aplicación
+	\item Equipo de Turnip Prophet: predicción del precio de los nabos
+	\item Ninji: Información sobre el funcionamiento del mercado de nabos, así como de la mudanza de los vecinos
+	\item A la increíble comunidad de este juego que, incluso después de más de un año desde su lanzamiento, sigue investigando y confeccionando herramientas y aplicaciones para disfrutar aun más de este videojuego.
+\end{itemize}
+
+Además de los mencionados anteriormente, el proyecto no habría sido posible sin la gran colaboración de nuestro profesor José Ramón Portillo Fernández, el cual nos ha animado en todo momento a elaborar un buen proyecto y nos ha aconsejado ante las dudas que han ido surgiendo.\\
+
