Memoria fix - moi

--- a/memoria/Capitulos/analanteced.tex
+++ b/memoria/Capitulos/analanteced.tex
@@ -2,7 +2,7 @@
 
 \section{Análisis de antecedentes}
 
-A continuación se mostrarán las herramientas a las que uno debería de acceder para obtener toda la información que pudiera necesitar sobre el juego:
+A continuación se mostrarán algunas de las herramientas a las que uno debería de acceder para obtener gran parte de la información que pudiera necesitar sobre el juego:
 
 \subsection{Servicios de cálculo de nabos}
 
@@ -12,7 +12,7 @@ Muchos servicios se centran exclusivamente en esta función del cálculo de futu
 
 \figura{0.8}{img/cap3/nabos.jpg}{Turnip Prophet}{fig:turnipprophet}{}
 
-Este tipo de servicio lo proveen varias páginas web, como \href{https://turnipprophet.io/}{Turnip Prophet} {(v\'ease la figura~\ref{fig:turnipprophet})}, siendo esta la página mas conocida y con una interfaz más cercana al usuario, siguiendo un diseño similar a la estética del HUD de \textit{Animal Crossing: New Horizons}; o \href{https://artem6.github.io/acnh_turnips/}{Turnip Price Calculator}, la cual es una web un poco más técnica que ofrece varias gráficas en la que obtener información adicional sobre las probabilidades de los patrones de venta.\\
+Este tipo de servicio lo proveen varias páginas web, como \href{https://turnipprophet.io/}{Turnip Prophet} {(v\'ease la figura~\ref{fig:turnipprophet})}, siendo esta la página mas conocida y con una interfaz más cercana al usuario, siguiendo un diseño similar a la estética de \textit{Animal Crossing: New Horizons}; o \href{https://artem6.github.io/acnh_turnips/}{Turnip Price Calculator}, la cual es una web un poco más técnica que ofrece varias gráficas en la que obtener información adicional sobre las probabilidades de los patrones de venta.\\
 
 Todos estos servicios web, incluido el nuestro, han podido hacer uso de dicha herramienta gracias al usuario \textit{\href{https://twitter.com/_Ninji/status/1244818665851289602?s=20}{Ninji}}, el cual analizó el código del videojuego para desarrollar un algoritmo que pudiera obtener la aproximación de los patrones de venta de la próxima semana.
 
@@ -32,7 +32,7 @@ Al igual que con el algoritmo de los nabos, este servicio también ha sido desar
 
 En esta página podemos encontrar varios servicios a destacar. Para empezar, dispone de un mercado donde cualquier jugador puede poner a la venta artículos que no necesite y desee intercambiar por bienes dentro del juego. Asimismo, también pueden comprar productos que se encuentren anunciados. Todo el servicio del mercado es informativo, ya que la página no lleva un sistema de venta como tal, sino que solo informa a los usuarios y los pone en contacto para que sean ellos los que se reúnan de forma online en el videojuego y realicen la transacción. Gracias a este servicio, se puede contar con una gran interacción de la comunidad mediante la página web, lo que le da mucha vida.\\
 
-Esta es una funcionalidad que hemos decidido no añadir ya que hemos considerado que con el conjunto de herramientas que vamos a centralizar, estábamos realizando bastante trabajo y añadir una funcionalidad tan extensa como esta puede resultar demasiado ambicioso, ya que aunque siendo meramente informativo, habría que realizar algún tipo de conexión entre usuarios de forma que se pudiesen comunicar. Además, el objetivo de nuestro sistema era centralizar todas las herramientas que un usuario pueda necesitar a la hora de jugar de forma individual, como si de una enciclopedia con funcionalidades extra se tratase, por lo que no se busca la interacción entre usuarios. Sin embargo, no se descarta completamente en caso de que haya que aumentar el alcance del proyecto.\\
+Esta es una funcionalidad que hemos decidido no añadir ya que hemos considerado que con el conjunto de herramientas que vamos a centralizar, estábamos realizando bastante trabajo y añadir una funcionalidad tan extensa como esta puede resultar demasiado ambicioso, ya que aunque siendo meramente informativo, habría que realizar algún tipo de conexión entre usuarios de forma que se pudiesen comunicar. Además, el objetivo de nuestro sistema era centralizar gran parte de las herramientas que un usuario pueda necesitar a la hora de jugar de forma individual, como si de una enciclopedia con funcionalidades extra se tratase, por lo que no se busca la interacción entre usuarios. Sin embargo, no se descarta completamente en caso de que haya que aumentar el alcance del proyecto.\\
 
 Entre otras funcionalidades, Nook's Island cuenta también con un sistema para compartir Códigos de Sueño y Diseños personalizados, así como una enciclopedia de criaturas. Sin embargo, creemos que tanto el apartado visual como la accesibilidad de la web es bastante mejorable. Estas funciones estarán en nuestro sistema de una forma algo distinta, cambiando la información que se muestra de forma que lo más importante se encuentre a primera vista y los detalles menos importantes se queden en segundo plano. De esta forma se espera que el usuario pueda hacer uso de ellas de una forma más fácil e intuitiva.
 
@@ -55,7 +55,7 @@ Pero no solo nos hemos limitado a eso, sino que además ofrece una serie de herr
 	
 	\item Listado de criaturas en función de la fecha y hora: otra de las herramientas más útiles y que suele aparecer mas frecuentemente en aplicaciones móviles. Esta herramienta es un listado de los tres tipos de criaturas que se pueden capturar en el juego, pero lo realmente importante es que, dado que en el juego las criaturas aparecen dependiendo del mes o la hora del día, el listado muestra al igual que en el juego aquellas criaturas que se pueden capturar en tiempo real, y además permite cambiar la fecha para que el usuario pueda planear con antelación la llegada de un nuevo mes (y por tanto, nuevas criaturas), siendo esto una fuente de información realmente útil para el jugador.
 	
-	\item Calcular la probabilidad de mudanza: uno de los aspectos más importantes del juego son los vecinos con los que te puedes relacionar, y periódicamente estos vecinos irán pensando en mudarse de la isla del jugador, lo que puede ser una oportunidad para buscar nuevos vecinos. Este proceso es bastante tedioso para un jugador que no conozca mucha información al respecto, ya que conlleva esperar varios días (incluso semanas) si no se conoce toda los aspectos a tener en cuenta. Esta herramienta permite calcular la probabilidad de mudanza de cada vecino, de forma que el jugador pueda conocer con la mayor precisión posible cuál será el siguiente vecino en mudarse y actuar en consecuencia. Es una herramienta sumamente importante y de la que muy pocas aplicaciones disponen, por lo que es un punto bastante importante en nuestra aplicación.
+	\item Calcular la probabilidad de mudanza: uno de los aspectos más importantes del juego son los vecinos con los que te puedes relacionar, y periódicamente estos vecinos irán pensando en mudarse de la isla del jugador, lo que puede ser una oportunidad para buscar nuevos vecinos. Este proceso es bastante tedioso para un jugador que no conozca mucha información al respecto, ya que conlleva esperar varios días (incluso semanas) si no se conocen todos los aspectos a tener en cuenta. Esta herramienta permite calcular la probabilidad de mudanza de cada vecino, de forma que el jugador pueda conocer con la mayor precisión posible cuál será el siguiente vecino en mudarse y actuar en consecuencia. Es una herramienta sumamente importante y de la que muy pocas aplicaciones disponen, por lo que es un punto bastante importante en nuestra aplicación.
 	
 	\item Álbum de fotos y reproductor de música: estas dos herramientas son completamente innovadoras, ya que no hemos encontrado aplicaciones que ya las tuvieran. Se trata tanto de un álbum de fotos personal para que el usuario pueda reunir sus capturas del juego en un mismo sitio, así como un reproductor de canciones del juego junto al listado de las mismas. El listado de canciones es algo de lo que si disponen varias aplicaciones, pero ninguna permite reproducir dichas canciones por lo que es un punto a favor para nuestra aplicación.
 	
