--- a/memoria/Capitulos/defobjetivos.tex
+++ b/memoria/Capitulos/defobjetivos.tex
@@ -5,7 +5,7 @@ Para que podamos dar este proyecto por finalizado, debemos cumplir una serie de 
 \begin{itemize}
 	\item \textbf{Objetivos académicos:}
 	\begin{itemize}
-		\item Centralizar las distintas herramientas que ya existen en una sola aplicación web, de forma que el usuario disponga de toda la información en un mismo lugar.
+		\item Centralizar varias de las distintas herramientas que ya existen en una sola aplicación web, de forma que el usuario disponga de toda la información en un mismo lugar.
 		
 		\item Crear como mínimo una herramienta nueva que aporte una funcionalidad útil de cara al videojuego.
 		
