--- a/memoria/Capitulos/introduccion.tex
+++ b/memoria/Capitulos/introduccion.tex
@@ -6,4 +6,4 @@ Debido a esto, llegamos a la decisión de crear una aplicación web que contenga
 
 En nuestra aplicación, el usuario tiene a su alcance una serie de herramientas pensadas para los distintos ámbitos del juego: tareas personalizables diarias, un calendario para no perderse los posibles eventos del juego, una forma de predecir el mercado, un álbum de fotos personal, varios catálogos que cubren todo lo que el jugador puede encontrar en el juego, así como una forma para catalogar los ítems y disponer de una colección personal, etc.\\
 
-Las herramientas y posibilidades son tan extensas que no podemos agruparlas todas, pero sí que podemos realizar un conjunto de las más importantes y de aquellas que le serán de más utilidad al usuario, y eso es lo que hemos hecho. Pensamos que es una aplicación muy útil, bastante ampliable de cara al futuro (ya que el juego sigue actualizándose con nuevo contenido), y que puede ser de gran ayuda para muchas personas que a día de hoy sigan jugando al juego.\\
+Las herramientas y posibilidades son tan extensas que no podemos agruparlas todas, pero sí que podemos realizar un conjunto de las más importantes y de aquellas que le serán de más utilidad al usuario, y eso es lo que hemos hecho. Pensamos que es una aplicación muy útil, bastante ampliable de cara al futuro (ya que el juego sigue actualizándose con nuevo contenido), y que puede ser de gran ayuda para muchas personas que a día de hoy sigan disfrutando del juego.\\
