--- a/memoria/Capitulos/requisitos.tex
+++ b/memoria/Capitulos/requisitos.tex
@@ -278,11 +278,11 @@ Bajando vemos diferentes secciones, disponiendo en primer plano de la portada co
 
 \clearpage
 
-Empezando por las secciones que hemos comentado en el párrafo anterior, a continuación tenemos un listado de peces, aunque el formato es genérico para los demás listados, cambiado algunos pequeños detalles en cada uno como ciertos filtros.\\
+Empezando por las secciones que hemos comentado en el párrafo anterior, a continuación tenemos un listado de peces, aunque el formato es genérico para los demás listados, cambiando algunos pequeños detalles en cada uno como ciertos filtros.\\
 
-Podemos observar que arriba se encuentra la sección de filtros para que el usuario pueda realizar una búsqueda más específica de manera simple. Debajo de los filtros se encuentra el listado en sí, que muestra una recopilación de los peces (en este caso) disponibles en el juego. Cada item cuenta con una imagen, su nombre y algunos de los datos más relevantes, como precio de venta o localización, y si se hace clic en la celda se abre un menú con información más detallada, de forma que lo importante esté siempre a la vista y no haya que entrar en los menús de forma repetitiva.\\
+Podemos observar que arriba se encuentra la sección de filtros para que el usuario pueda realizar una búsqueda más específica de manera simple. Debajo de los filtros se encuentra el listado en sí, que muestra una recopilación de los peces (en este caso) disponibles en el juego. Cada ítem cuenta con una imagen, su nombre y algunos de los datos más relevantes, como precio de venta o localización, y si se hace clic en la celda se abre un menú con información más detallada, de forma que lo importante esté siempre a la vista y no haya que entrar en los menús de forma repetitiva.\\
  
-En rojo se muestran aquellas criaturas que no se encontrarán disponibles el mes que viene, y además, si el usuario está registrado en el sistema y ha iniciado sesión, puede llevar recuento de los que ya ha capturado marcándolos con el tick superior derecho en cada item, cambiándose así el fondo a un color distinto para diferenciarlos a simple vista {(v\'ease la figura~\ref{fig:listado})}.\\
+En rojo se muestran aquellas criaturas que no se encontrarán disponibles el mes que viene, y además, si el usuario está registrado en el sistema y ha iniciado sesión, puede llevar recuento de los que ya ha capturado marcándolos con el tick superior derecho en cada ítem, cambiándose así el fondo a un color distinto para diferenciarlos a simple vista {(v\'ease la figura~\ref{fig:listado})}.\\
 
 \figura{1}{img/mockups/Listado.png}{Listado genérico}{fig:listado}{}
 
