--- a/memoria/Capitulos/implementacion.tex
+++ b/memoria/Capitulos/implementacion.tex
@@ -3,15 +3,15 @@
 \section{Entorno de desarrollo}
 
 \figura{0.25}{img/cap6/vscode.png}{Logotipo Visual Studio Code}{fig:vscode}{}
-El entorno de desarrollo utilizado para estra proyecto ha sido Microsoft Visual Studio Code, ya que es un IDE bastante versátil que soporta una gran variedad de lenguajes y que, al ser de código abierto, presenta la posibilidad de instalar plugins creados por la comunidad para obtener funcionalidades útiles para cualquier tipo de lenguaje. Dado que vamos a trabajar con Angular, con la instalación de un paquete de plugins de Angular hemos podido trabajar de forma bastante cómoda y sin ningún problema.\\
+El entorno de desarrollo utilizado para este proyecto ha sido Microsoft Visual Studio Code, ya que es un IDE bastante versátil que soporta una gran variedad de lenguajes y que, al ser de código abierto, presenta la posibilidad de instalar plugins creados por la comunidad para obtener funcionalidades útiles para cualquier tipo de lenguaje. Dado que vamos a trabajar con Angular, con la instalación de un paquete de plugins de Angular hemos podido trabajar de forma bastante cómoda y sin ningún problema.\\
 
 Además, ofrece soporte para Git, de forma que se pueden realizar operaciones en el repositorio de forma bastante sencilla, así como gestionar lo posibles errores que puedan surgir mediante la misma interfaz, por lo que resulta bastante cómodo.\\
 
-La principal ventaja de Visual Studio Code es que, al ser un IDE universal, contamos con varias funciones generales de los IDE (debug, consola de comandos) pero aplicado a una gran variedad de lenguajes, de forma que con el simple hecho de tenerlo instalado ya se puede comenzar a trabajar (incluso sin la necesidad de plugins, aunque no es recomendable). Es por esto que con el simple hecho de disponer del IDE y descargar un par de plugins, ya se puede trabajar de forma cómoda, y además se puede adaptar de manera sorprendente ya que, si en algún momento hay que trabajar con otro lenguaje, se puede realizar perfectamente sin tener que descargar otro IDE. Directamente desde Visual Studio Code y con algun plugin extra, ya se puede incorporar el nuevo lenguaje y trabajar de forma cómoda con ambos, lo cual centraliza el trabajo en una misma aplicación y resulta más eficiente.\\
+La principal ventaja de Visual Studio Code es que, al ser un IDE universal, contamos con varias funciones generales de los IDE (debug, consola de comandos) pero aplicado a una gran variedad de lenguajes, de forma que con el simple hecho de tenerlo instalado ya se puede comenzar a trabajar (incluso sin la necesidad de plugins, aunque no es recomendable). Es por esto que con el simple hecho de disponer del IDE y descargar un par de plugins, ya se puede trabajar de forma cómoda, y además se puede adaptar de manera sorprendente ya que, si en algún momento hay que trabajar con otro lenguaje, se puede realizar perfectamente sin tener que descargar otro IDE. Directamente desde Visual Studio Code y con algún plugin extra, ya se puede incorporar el nuevo lenguaje y trabajar de forma cómoda con ambos, lo cual centraliza el trabajo en una misma aplicación y resulta más eficiente.\\
 
 \section{Tecnolog\'ias utilizadas}
 
-La idea principal de este proyecto era usar Angular como tecnología para el front-end por las razones ya explicadas anteriormente. Las demás tecnologías que fueramos a usar no iban a tener tanto peso para nosotros como lo iba a tener esta, por lo que ibamos con la mente abierta dispuestos a usar la tecnología que, además de adaptarse bien a nuestro proyecto, fuera compatible con Angular. Al principio, pensamos en usar una base de Spring para el back-end, ya que es un framework que hemos visto en la carrera y además hemos adquirido experiencia en Java durante todo la carrera, pero debido a que no sabíamos nada sobre el funcionamiento de Angular (y todo lo que puede llegar a abarcar), pensamos que el peso de la aplicación se la llevaría el back-end (en Spring al principio). Sin embargo, una vez aprendimos y nos pusimos a dar nuestros primeros pasos en el framework, descubrimos que se puede realizar la gran mayoría de funcionalidades de la aplicación en Angular.\\
+La idea principal de este proyecto era usar Angular como tecnología para el front-end por las razones ya explicadas anteriormente. Las demás tecnologías que fuéramos a usar no iban a tener tanto peso para nosotros como lo iba a tener esta, por lo que íbamos con la mente abierta dispuestos a usar la tecnología que, además de adaptarse bien a nuestro proyecto, fuera compatible con Angular. Al principio, pensamos en usar una base de Spring para el back-end, ya que es un framework con el que hemos trabajado bastante y además hemos adquirido experiencia en Java durante toda la carrera, pero debido a que no sabíamos nada sobre el funcionamiento de Angular (y todo lo que puede llegar a abarcar), pensamos que el peso de la aplicación se la llevaría el back-end (en Spring al principio). Sin embargo, una vez aprendimos y nos pusimos a dar nuestros primeros pasos en el framework, descubrimos que se puede realizar la gran mayoría de funcionalidades de la aplicación en Angular.\\
 
 Además luego llegó la hora de conectar el proyecto en Angular con la base de datos. Estábamos acostumbrados a Spring, que realiza toda la gestión de base de datos por detrás en el mismo framework y tan solo es necesario inicializar los repositorios con las querys, así como las beans para popular la base de datos. Sin embargo, al estar trabajando con Angular, tuvimos que buscar información sobre como realizar esta conexión y descubrimos que se podía conectar a una base de datos gestionada mediante PHP con una simple petición HTTP al archivo que realizase la conexión y las operaciones oportunas. Esta idea nos gustó bastante ya que, no solo tendríamos que usar otro lenguaje (por lo que aprendemos más), sino que además podíamos utilizar la conexión con la base de datos a modo de API, haciendo peticiones HTTP desde Angular al correspondiente archivo PHP, el cual se encarga de abrir la conexión con la base de datos, realizar la consulta oportuna, y devolver los datos, los cuales Angular se encarga de recoger, transformarlos en caso de ser necesario, y finalmente, mostrarlos.\\
 
@@ -26,7 +26,7 @@ Una vez montada la estructura de la base de datos y habiendo probado ya el funci
 \figura{0.4}{img/cap6/angular.png}{Logotipo Angular}{fig:angular}{}
 Angular es un framework para aplicaciones web desarrollado en TypeScript de código abierto que suele ser utilizado para la creación de aplicaciones web de una sola página (SPA), además de seguir el diseño Modelo-Vista-Controlador (MVC).\\
 
-Angular funciona mediante componentes, los cuales disponen de sus respectivas variables y métodos que se encargan de realizar la lógica, así como de operar con su vista asociada. De esta forma, obtenemos pequeños paquetes de código, cada uno con su vista y su lógica. Podría explicarse como si de un puzzle se tratase, pero con muchas posibles soluciones, siendo cada pieza un componente con su vista, sus variables y métodos. Cada pieza es funcional por si misma, pero el objetivo es juntarlos con otros componentes para obtener la aplicación (o vista) completa.\\
+Angular funciona mediante componentes, los cuales disponen de sus respectivas variables y métodos que se encargan de realizar la lógica, así como de operar con su vista asociada. De esta forma, obtenemos pequeños paquetes de código, cada uno con su vista y su lógica. Podría explicarse como si de un puzle se tratase, pero con muchas posibles soluciones, siendo cada pieza un componente con su vista, sus variables y métodos. Cada pieza es funcional por si misma, pero el objetivo es juntarlos con otros componentes para obtener la aplicación (o vista) completa.\\
 
 Además de ser una forma bastante interesante de desarrollar una aplicación, es una muy buena forma de evitar la repetición de código, ya que si se necesita reusar un componente es tan fácil como importarlo y se encuentra listo. De la misma forma, se trabaja con servicios, directivas y etiquetas que pueden ser reutilizadas, reduciendo así la carga de trabajo considerablemente y aumentando la limpieza del código.\\
 
@@ -79,7 +79,7 @@ Git es un software de control de versiones. Su propósito es llevar registro de 
 
 Es uno de los software de control de versiones más populares, lo que ha provocado que muchas aplicaciones ofrezcan compatibilidad con Git, como puede ser Microsoft Visual Studio Code o Eclipse IDE por ejemplo.\\
 
-Como ya se ha comentado, a raiz de Git nació GitHub, siendo también de las plataformas más populares para el alojamiento de proyectos y colaboración simultánea en los mismos. GitHub ofrece desde su servicio básico de alojar proyectos, hasta wikis por cada proyecto, tableros estilo Kanban, gráficas del trabajo y gran cantidad de adiciones para facilitar el trabajo colaborativo en dichos proyectos.\\
+Como ya se ha comentado, a raíz de Git nació GitHub, siendo también de las plataformas más populares para el alojamiento de proyectos y colaboración simultánea en los mismos. GitHub ofrece desde su servicio básico de alojar proyectos, hasta wikis por cada proyecto, tableros estilo Kanban, gráficas del trabajo y gran cantidad de adiciones para facilitar el trabajo colaborativo en dichos proyectos.\\
 
 Además existen plugins que añaden funcionalidades a la plataforma o que la integran en otras aplicaciones para que su uso esté mas centralizado y sea más cómodo.\\
 
@@ -93,9 +93,9 @@ Como es común en todos los proyectos, a medida que se ha ido avanzando en el de
 
 Esta ha sido la primera iteración en la que hemos empezado a programar y hemos desarrollado features. Al principio, dado que íbamos a trabajar con una API \citep{acnhapi} de la que sacaríamos todos los datos, pensamos que el perfil del usuario, así como las distintas funciones que habían dentro de este, no resultarían un gran trabajo ya que trataría más de consumir información y que, por lo tanto, sería un buen comienzo para empezar a iniciarnos en Angular.\\
 
-Sin embargo, cuando nos pusimos a desarrollar código, vimos que no era tan simple y que todo lo que pensábamos que sería consumir información, eran en realidad features que había que realizar, con sus respectivos servicios, clases y lógica, ya que necesitábamos almacenar dicha información relacionándola con el usuario. Esto hizo que se aumentara bastante la carga de trabajo, así que para no cargarnos mucho en esta primera iteración de desarrollo, decidimos dejar la implementación de la API para el siguiente sprint (asi como la realización de los tests, ya que no tiene sentido desarrollar unos tests para features que no estan completas).\\
+Sin embargo, cuando nos pusimos a desarrollar código, vimos que no era tan simple y que todo lo que pensábamos que sería consumir información, eran en realidad features que había que realizar, con sus respectivos servicios, clases y lógica, ya que necesitábamos almacenar dicha información relacionándola con el usuario. Esto hizo que se aumentara bastante la carga de trabajo, así que para no cargarnos mucho en esta primera iteración de desarrollo, decidimos dejar la implementación de la API para el siguiente sprint (asi como la realización de los tests, ya que no tiene sentido desarrollar unos tests para features que no están completas).\\
 
-De este modo, aunque algo más laborioso de lo que se pensó en un principio, pudimos realizar un sprint de introducción al lenguaje (del que hemos aprendido bastante) que nos sirve como base para los siguientes sprint, ya que con cada feature que hemos ido desarrollando, hemos descubierto más y más sobre el framework, adquiriendo así las nociones necesarias para avanzar de forma eficiente.
+De este modo, aunque algo más laborioso de lo que se pensó en un principio, pudimos realizar un sprint de introducción al lenguaje (del que hemos aprendido bastante) que nos sirve como base para los siguientes sprints, ya que con cada feature que hemos ido desarrollando, hemos descubierto más y más sobre el framework, adquiriendo así las nociones necesarias para avanzar de forma eficiente.
 
 \subsection{It. 3 - Mantener sesiones}
 
@@ -107,15 +107,11 @@ Esto ocasionó que tuviéramos que dar un rodeo buscando posibles soluciones has
 
 \subsection{It. 3 - Features del perfil}
 
-En la feature de ``Mis vecinos``, teníamos que calcular el porcentaje que tiene cada vecino de mudarse de isla, dependiendo de la amistad que tenga con el jugador y de ciertos parámetros que hayan podido ocurrir. Este algoritmo pensábamos que ya lo habrían sacado del juego y podríamos acceder a él, sin embargo no fue así.\\
-
-Dado que no se había publicado el algoritmo, tuvimos que realizar cierta investigación para dar con la fórmula que calcula dicha probabilidad y acto seguido, implementar nosotros el algoritmo (Agradecimientos al usuario de Twitter \textit{Ninji} que publicó la lógica y las matemáticas que sigue el juego para calcular la probabilidad de mudanza, información a partir de la cual pudimos implementar el algoritmo).\\
+En la feature de ``Mis vecinos``, teníamos que calcular el porcentaje que tiene cada vecino de mudarse de isla, dependiendo de la amistad que tenga con el jugador y de ciertos parámetros que hayan podido ocurrir. Este algoritmo pensábamos que ya lo habrían sacado del juego y podríamos acceder a él, sin embargo no fue así, por lo que tuvimos que realizar cierta investigación para dar con la fórmula que calcula dicha probabilidad y acto seguido, implementar nosotros el algoritmo (Agradecimientos al usuario de Twitter \textit{Ninji} que publicó la lógica y las matemáticas que sigue el juego para calcular la probabilidad de mudanza, información a partir de la cual pudimos implementar el algoritmo).\\
 
 Respecto a la feature de ``Colecciones Especiales``, dado que no nos habíamos informado tanto como debíamos sobre la API que íbamos a usar, descubrimos que dicha API no tiene ningún método de filtro mas que obtener objetos por su id, por lo que nos obligaba a hacer una petición con todos los objetos e ir filtrando por ``fuente`` (colección) para seleccionar los que nos interesaban. Esto era posible pero suponía un gran coste computacional, especialmente si lo implementamos de forma que cualquier usuario pueda hacer dicha petición.\\
 
-Ante este problema, dimos con la idea de crear un usuario administrador (el cual no había hecho falta hasta ahora) que pudiera ejecutar dicha petición para actualizar el catalogo de colecciones, de forma que con una sola petición por parte del administrador, se actualizan los items disponibles para los usuarios, de forma que estos acceden a una tabla de la base de datos con datos mínimos (fuente e id).\\
-
-De esta forma, aunque guardamos algunos datos en la base de datos, nos ahorramos tanto el realizar peticiones de forma constante en la que recibimos cientos de objetos, como el filtrarlos para poder obtener los deseados, aumentando así la velocidad de respuesta.
+Ante este problema, dimos con la idea de crear un usuario administrador (el cual no había hecho falta hasta ahora) que pudiera ejecutar dicha petición para actualizar el catalogo de colecciones, de forma que con una sola petición por parte del administrador, se actualizan los ítems disponibles para los usuarios, de forma que estos acceden a una tabla de la base de datos con datos mínimos (fuente e id). De esta forma, aunque guardamos algunos datos en la base de datos, nos ahorramos tanto el realizar peticiones de forma constante en la que recibimos cientos de objetos, como el filtrarlos para poder obtener los deseados, aumentando así la velocidad de respuesta.
 
 \subsection{It. 4 - API incompleta}
 
@@ -137,11 +133,11 @@ De entre varias webs que ya disponen de esta herramienta, hay una \citep{turnipp
 
 El problema es que, al ser código reciclado y además en ficheros JavaScript, nos llevamos un tiempo haciendo pruebas para comprender el funcionamiento y la integración con nuestra aplicación, ya que hasta ahora habíamos estado trabajando con los ficheros TypeScript de Angular y no habíamos integrado ningún fichero JS externo. Esto conllevó varias pruebas hasta que finalmente conseguimos realizar la integración de forma satisfactoria, pero a cambio de cierto tiempo empleado en búsqueda de posibles soluciones, comprensión del código e integración con nuestra aplicación.\\
 
-Otro problema que surge a raíz de lo mismo fue que tanto para la calculadora de nabos como para el calendario (especialmente para éste último) tuvimos bastante limitado la personalización \citep{angularcalendar}. El calendario hace uso de una aplicación de Angular ya creada que nos ofrece un calendario con posibilidad de añadir nuestros propios eventos, así como muchas más posibilidades. El problema es que nuestro calendario es mucho más básico ya que lo único que busca es mostrar información de eventos preestablecidos, por lo que era necesario modificarlo para adaptarlo a nuestra aplicación.\\
+Otro problema que surge a raíz de lo mismo fue que tanto para la calculadora de nabos como para el calendario (especialmente para éste último) tuvimos bastante limitada la personalización \citep{angularcalendar}. El calendario hace uso de una aplicación de Angular ya creada que nos ofrece un calendario con posibilidad de añadir nuestros propios eventos, así como muchas más posibilidades. El problema es que nuestro calendario es mucho más básico ya que lo único que busca es mostrar información de eventos preestablecidos, por lo que era necesario modificarlo para adaptarlo a nuestra aplicación.\\
 
 Pero claro, aunque estaba preparado para poder personalizarlo bastante, había que realizar muchos cambios, por lo que al igual que nos ocurrió con la calculadora de nabos, tuvimos que dedicarle algo de tiempo a comprender como funcionaba y más aún a realizar los cambios. Lo malo es que el calendario se generaba automáticamente, es decir, no disponíamos de todo el HTML desde el inicio, por lo que los cambios para añadir o quitar elementos tuvimos que realizarlos mediante CSS y JS, lo que se nos complicó bastante ya que era código reciclado y teníamos que tener cuidado al operar para no destrozar el funcionamiento ni afectar a más de lo que queríamos.\\
 
-Dicho esto, pudimos modificarlo de forma satisfactoria tras dedicarle algo de tiempo. Aunque no obtuvimos el resultado que queríamos al 100\%, si que nos acercamos bastante a lo que buscábamos, por lo que nos ahorró bastante más tiempo que si lo hubiéramos implementado desde 0.
+Dicho esto, pudimos modificarlo de forma satisfactoria tras dedicarle algo de tiempo. Aunque no obtuvimos el resultado que queríamos al 100\%, si que nos acercamos bastante a lo que buscábamos, por lo que nos ahorró bastante más tiempo que si lo hubiéramos implementado desde cero.
 
 \subsection{It. 5 - Feature demasiado compleja}
 
@@ -149,15 +145,17 @@ Una de las features que queríamos añadir en este sprint era el "Probador de ro
 
 En un principio esta herramienta se planteó de forma que la prenda que eligiese el usuario iría superpuesta a la imagen del personaje en la zona correspondiente (por ejemplo si es una camiseta, iría en el torso). Esta idea no estaba exenta de fallos ya que dependíamos de la postura de las prendas de ropa (la gran mayoría vienen en "T-pose") y había varias, especialmente aquellas de manga larga, que por ejemplo tenían una manga doblada, lo que nos impedía representar por completo la ilusión de que el personaje llevaba la prenda.\\
 
-Aun así, no eran muchas prendas, por lo que al ser una herramienta tan interesante decidimos seguir adelante e incluirla en el planteamiento. Sin embargo, al llegar a este sprint donde tocaba su implementación, fue cuestión de poco tiempo el darnos cuenta de que era inviable. No solo es que hubiese algunas prendas con una manga doblada, sino que había tipos de prenda completos cuya imagen no podíamos representarlo como si el personaje estuviera llevándola puesta (por ejemplo, los zapatos se ven desde una posición cenital y los calcetines se muestan en pareja, por lo que no hay manera posible de representarlos).\\
+Aun así, no eran muchas prendas, por lo que al ser una herramienta tan interesante decidimos seguir adelante e incluirla en el planteamiento. Sin embargo, al llegar a este sprint donde tocaba su implementación, fue cuestión de poco tiempo el darnos cuenta de que era inviable. No solo es que hubiese algunas prendas con una manga doblada, sino que había tipos de prenda completos cuya imagen no podíamos representarlo como si el personaje estuviera llevándola puesta (por ejemplo, los zapatos se ven desde una posición cenital y los calcetines se muestran en pareja, por lo que no hay manera posible de representarlos).\\
 
 Tras investigar todo lo posible, vimos que eran tantos los fallos visuales que se cometerían que no rentaba realizar una herramienta tan completa para obtener un funcionamiento tan mediocre. Intentamos optar por buscar alguna herramienta del estilo ya realizada o algo que pudiésemos utilizar para intentar salvar la herramienta, pero por desgracia no dimos con nada por lo que optamos por desechar la funcionalidad.\\
 
 Finalmente intentamos buscar otra feature para reemplazar a ésta, pero ya no quedaba demasiado por añadirle a la página que le resultara útil al usuario más que párrafos y párrafos de información, que aunque útiles, no es lo que busca nuestra página, por lo que optamos por no realizar ninguna y dedicar el tiempo de implementación de dicha herramienta tanto al apartado visual de la página como a pulirla todo lo posible.\\
 
-Cabe decir que la implementación del probador de ropa es posible realizarla, solo que para obtener un buen resultado habría que dedicarle horas y horas de recolección de imágenes del juego, así como de edición manual de las mismas mediante un programa de edición fotográfica para que se adapten al resultado que buscamos. Sin embargo, no solo es un trabajo manual (y por lo tanto, va en contra de lo que queremos ya que buscamos hacerlo todo de la forma más programática posible) sino que además sería demasiado extenso y en cuestión de trabajo/tiempo no podíamos dedicárselo.
+Cabe decir que la implementación del probador de ropa es posible realizarla, solo que para obtener un buen resultado habría que dedicarle horas y horas de recolección de imágenes del juego, así como de edición manual de las mismas mediante un programa de edición fotográfico para que se adapten al resultado que buscamos. Sin embargo, no solo es un trabajo manual (y por lo tanto, va en contra de lo que queremos ya que buscamos hacerlo todo de la forma más programática posible) sino que además sería demasiado extenso y en cuestión de trabajo/tiempo no podíamos dedicárselo.
 
 \subsection{It. 6 - Integración continua}
+
+Aunque la idea principal consistía en realizar las features así como sus respectivos tests en el mismo sprint en el que se desarrollaban, por cuestiones de tiempo y otras razones que variaban a medida que avanzábamos en el proyecto, nos vimos en la necesidad de ir aplazando el desarrollo de tests, hasta que finalmente decidimos dejarlos para el último sprint.\\
 
 Cuando por fin pudimos empezar a realizar las pruebas, lo primero que pensamos fue en utilizar un sistema de integración continua (como puede ser TravisCI), de forma que se ejecutasen los tests con cada subida al repositorio, obteniendo de esta forma un reporte de posibles errores periódicamente con el que poder asegurarnos de que la aplicación funciona correctamente en cada subida.\\
 
@@ -176,11 +174,11 @@ Esto nos suponía un leve problema ya que las tareas del perfil se desactivan di
 
 Sin embargo, este problema puede ser solucionado de varias formas: o bien alojando nuestra BBDD en un servicio que permita la creación de eventos (aunque sería un servicio de pago); o bien optando por reiniciar las tareas de otra forma distinta en el código (aunque no lo consideramos óptimo ya que los eventos SQL están precisamente diseñados para realizar este tipo de tareas).\\
 
-Es por eso que, siendo lo ideal resolverlo mediante la primera opción (ya que en un despliegue real de la aplicación necesitaríamos un servicio con mayor número de consultas y otras características, entre las cuales vendría el servicio de creación de eventos), hemos decidido usar esta opción gratuita de alojamiento y prescindir de dicho evento (especialmente, tratándose solo de un evento cuya función equivale a hacer click en el botón de la tarea y apenas va a ser notable).\\
+Es por eso que, siendo lo ideal resolverlo mediante la primera opción (ya que en un despliegue real de la aplicación necesitaríamos un servicio con mayor número de consultas y otras características, entre las cuales vendría el servicio de creación de eventos), hemos decidido usar esta opción gratuita de alojamiento y prescindir de dicho evento (especialmente, tratándose solo de un evento cuya función equivale a hacer clic en el botón de la tarea y apenas va a ser notable).\\
 
 \subsection{It. 6 - CORS Policy}
 
-La política de CORS ha ocasinado problemas durante gran parte del desarrollo de la aplicación. Sin embargo, haciendo algunos ajustes en las cabeceras HTTP conseguimos evitar la aparición de más errores mientras que seguíamos desarrollando.\\
+La política de CORS ha ocasionado problemas durante gran parte del desarrollo de la aplicación. Sin embargo, haciendo algunos ajustes en las cabeceras HTTP conseguimos evitar la aparición de más errores mientras que seguíamos desarrollando.\\
 
 El problema vino una vez acabado el desarrollo, cuando nos pusimos a desplegar la aplicación, ya que como necesitamos desplegar en dos aplicaciones diferentes el backend y el frontend, al realizar peticiones entre sí otra vez ocurrían los errores. Esto se debe a que CORS, cuando está en producción, antes de cualquier petición HTTP manda una petición con el método OPTION, para comprobar que es correcta, y una ves recibe una respuesta satisfactoria, manda la petición original.\\
 
@@ -190,7 +188,7 @@ Sin embargo, tras una intensiva búsqueda en la web, dimos con una librería par
 
 \subsection{It. 6 - AdBlock}
 
-Aunque no es un problema grave per se, si que es un apunte a tener en cuenta y es que, si el usuario tiene instalado en su navegar algún addon para evitar publicidad, por cómo funcionan estos addons, hay algunas imágenes que no serán visibles, o que se mostrarán con un placeholder, ya que la misma url de la que se obtiene la imagen puede tener unos caracteres determinados que estén en la lista negra del addon y éste proceda a bloquearlo, pensando que se trata de publicidad.\\
+Aunque no es un problema grave per se, si que es un apunte a tener en cuenta y es que, si el usuario tiene instalado en su navegador algún addon para evitar publicidad, por cómo funcionan estos addons, hay algunas imágenes que no serán visibles, o que se mostrarán con un placeholder, ya que la misma url de la que se obtiene la imagen puede tener unos caracteres determinados que estén en la lista negra del addon y éste proceda a bloquearlo, pensando que se trata de publicidad.\\
 
 Aun así, este problema (que parece afectar exclusivamente a la carga de algunas imágenes) se puede solucionar desactivando dicho addon en la página.\\
 
