--- a/memoria/agradecimientos.tex
+++ b/memoria/agradecimientos.tex
@@ -10,8 +10,9 @@ Gran parte de este proyecto no hubiese sido posible sin herramientas y artefacto
 	\item MarkNickerson: Iconos para el logo de la aplicación
 	\item Equipo de Turnip Prophet: predicción del precio de los nabos
 	\item Ninji: Información sobre el funcionamiento del mercado de nabos, así como de la mudanza de los vecinos
-	\item A la increíble comunidad de este juego que, incluso después de más de un año desde su lanzamiento, sigue investigando y confeccionando herramientas y aplicaciones para disfrutar aun más de este videojuego.
 \end{itemize}
 
-Además de los mencionados anteriormente, el proyecto no habría sido posible sin la gran colaboración de nuestro profesor José Ramón Portillo Fernández, el cual nos ha animado en todo momento a elaborar un buen proyecto y nos ha aconsejado ante las dudas que han ido surgiendo.\\
+Agradecer también a la increíble comunidad de este juego que, incluso después de más de un año desde su lanzamiento, sigue investigando y confeccionando herramientas y aplicaciones para disfrutar aun más de este videojuego.\\
+
+Por último pero no por ello menos importante, el proyecto no habría sido posible sin la gran colaboración de nuestro tutor José Ramón Portillo Fernández, el cual nos ha animado en todo momento a elaborar un buen proyecto y nos ha aconsejado ante las dudas que han ido surgiendo.\\
 
