--- a/memoria/resumen.tex
+++ b/memoria/resumen.tex
@@ -2,9 +2,9 @@
 
 En Marzo del pasado año 2020, salió a la venta la última entrega de la saga de videojuegos ``Animal Crossing", publicado por Nintendo. Debido a la pandemia del COVID-19 que coincidió con la salida del videojuego, muchas personas fueron obligadas a quedarse en casa realizando cuarentena, y gracias a los servidores online que permiten la conexión entre jugadores, se creó una comunidad bastante amplia alrededor del videojuego que se vio potenciada debido a dicha pandemia.\\
 
-De esta forma, no tardaron mucho en salir varias webs y páginas cuyo objetivo era informar y conectar a los jugadores que disfrutaban del juego. Del mismo modo, este trabajo al que hemos bautizado bajo el título de ``My Crossing", no es sino un sistema de información que, como muchas otras, sirve de ayuda para el jugador proporcionándole herramientas e información sobre el juego.\\
+De esta forma, no pasó mucho tiempo hasta que empezaron a salir varias páginas web y aplicaciones cuyo objetivo era informar y conectar a los jugadores que disfrutaban del juego. Del mismo modo, este trabajo al que hemos bautizado bajo el título de ``My Crossing", no es sino un sistema de información que, como muchos otros, sirve de ayuda para el jugador proporcionándole herramientas e información sobre el juego.\\
 
-No obstante, buscábamos proporcionarle al usuario un sistema de información lo más completo posible y que le ayudase tanto en el día a día como en tareas más esporádicas, por lo que como usuarios y parte de la comunidad que somos, decidimos implementar funcionalidades e ideas que hasta ahora no se habían visto en los demás sitios web y que son de gran utilidad.\\
+No obstante, buscábamos proporcionarle al usuario una aplicación lo más completa posible y que le ayudase tanto en el día a día como en tareas más esporádicas, ya que el trabajo de buscar varias herramientas online para distintos aspectos del juego puede llegar a ser bastante tedioso, por lo que como usuarios y parte de la comunidad que somos, decidimos realizar un compendio de aquellas herramientas más importantes, así como implementar funcionalidades e ideas que hasta ahora no se habían visto en los demás sitios web y que son de gran utilidad.\\
 
-La aplicación web está desarrollada principalmente con Spring Boot y Angular, ya que además de realizar el sistema también queríamos ampliar nuestro conocimiento sobre esta última tecnología ya que es bastante útil para el desarrollo web y está actualmente en auge.
+La aplicación web está desarrollada principalmente con PHP y Angular, ya que además de realizar el sistema también queríamos ampliar nuestro conocimiento sobre esta última tecnología ya que es bastante útil para el desarrollo web y está actualmente en auge.
 
