--- a/memoria/Capitulos/implementacion.tex
+++ b/memoria/Capitulos/implementacion.tex
@@ -109,19 +109,17 @@ Esto ocasionó que tuviéramos que dar un rodeo buscando posibles soluciones has
 
 En la feature de ``Mis vecinos``, teníamos que calcular el porcentaje que tiene cada vecino de mudarse de isla, dependiendo de la amistad que tenga con el jugador y de ciertos parámetros que hayan podido ocurrir. Este algoritmo pensábamos que ya lo habrían sacado del juego y podríamos acceder a él, sin embargo no fue así, por lo que tuvimos que realizar cierta investigación para dar con la fórmula que calcula dicha probabilidad y acto seguido, implementar nosotros el algoritmo (Agradecimientos al usuario de Twitter \textit{Ninji} que publicó la lógica y las matemáticas que sigue el juego para calcular la probabilidad de mudanza, información a partir de la cual pudimos implementar el algoritmo).\\
 
-Respecto a la feature de ``Colecciones Especiales``, dado que no nos habíamos informado tanto como debíamos sobre la API que íbamos a usar, descubrimos que dicha API no tiene ningún método de filtro mas que obtener objetos por su id, por lo que nos obligaba a hacer una petición con todos los objetos e ir filtrando por ``fuente`` (colección) para seleccionar los que nos interesaban. Esto era posible pero suponía un gran coste computacional, especialmente si lo implementamos de forma que cualquier usuario pueda hacer dicha petición.\\
-
-Ante este problema, dimos con la idea de crear un usuario administrador (el cual no había hecho falta hasta ahora) que pudiera ejecutar dicha petición para actualizar el catalogo de colecciones, de forma que con una sola petición por parte del administrador, se actualizan los ítems disponibles para los usuarios, de forma que estos acceden a una tabla de la base de datos con datos mínimos (fuente e id). De esta forma, aunque guardamos algunos datos en la base de datos, nos ahorramos tanto el realizar peticiones de forma constante en la que recibimos cientos de objetos, como el filtrarlos para poder obtener los deseados, aumentando así la velocidad de respuesta.
-
 \subsection{It. 4 - API incompleta}
 
-En la iteración 4 debíamos hacer un repaso por las features realizadas en la iteración anterior de forma que añadiésemos todo lo necesario relacionado con la API \citep{acnhapi} que íbamos a utilizar para acceder tanto a imágenes como a datos del juego.\\
+En la iteración 4 debíamos hacer un repaso por las features realizadas en la iteración anterior de forma que añadiésemos todo lo necesario relacionado con la API que íbamos a utilizar \citep{acnhapi} para acceder tanto a imágenes como a datos del juego, pero debido a que no nos habíamos informado tanto como debíamos sobre la API, descubrimos que no tiene ningún método de filtro mas que obtener objetos por su id, por lo que nos obligaba a hacer una petición con todos los objetos e ir filtrando por ``fuente`` (colección) para seleccionar los que nos interesaban. Esto era posible pero suponía un gran coste computacional, especialmente si lo implementamos de forma que cualquier usuario pueda hacer dicha petición.\\
 
-Sin embargo, una vez nos pusimos a implementar la API, nos dimos cuenta de que, aunque bastante completa para algunos aspectos del juego, para otros no estaba tan completa y carecía de muchos datos que necesitábamos. Además solo implementaba métodos para obtener o todo el listado de datos, o uno solo (mediante su ID), pero en ningún momento nos dejaba filtrar, por lo que iba a ser un trabajo que íbamos a tener que realizar a mano y que además sería bastante costoso computacionalmente hablando.\\
+Ante este problema, dimos con la idea de crear un usuario administrador (el cual no había hecho falta hasta ahora) que pudiera ejecutar dicha petición para actualizar el catalogo de colecciones, de forma que con una sola petición por parte del administrador, se actualizan los ítems disponibles para los usuarios, de forma que estos acceden a una tabla de la base de datos con datos mínimos (fuente e id). De esta forma, aunque guardamos algunos datos en la base de datos, nos ahorramos tanto el realizar peticiones de forma constante en la que recibimos cientos de objetos, como el filtrarlos para poder obtener los deseados, aumentando así la velocidad de respuesta.\\
+
+Sin embargo, una vez nos pusimos a implementar más a fondo la API, nos dimos cuenta de que, aunque bastante completa para algunos aspectos del juego, para otros no estaba tan completa y carecía de muchos datos que necesitábamos. Además solo implementaba métodos para obtener o todo el listado de datos, o uno solo (mediante su ID), pero en ningún momento nos dejaba filtrar, por lo que iba a ser un trabajo que íbamos a tener que realizar a mano y que además sería bastante costoso computacionalmente hablando.\\
 
 Es por eso que realizamos otra búsqueda en la web para encontrar una solución distinta que nos proporcionase todo lo que necesitábamos. Primero encontramos otra API \citep{nookipediaapi} que, aunque disponía de más métodos y alguna información que nos podía resultar útil, estaba aun a mitad de desarrollo, por lo que también estaba algo incompleta. Se pensó en implementar ambas APIs, pero el resultado no era lo que buscábamos, era una solución algo compleja y no nos convencía del todo, pero parecía ser la única opción.\\
 
-Sin embargo, tras seguir buscando encontramos una librería \citep{acnhnpm} que se podía instalar directamente en Angular que disponía de toda la información que necesitábamos, así como ciertas traducciones e imágenes, por lo que decidimos usar esta librería ya que, no solo nos daba todo lo que necesitábamos sino que ademas su uso era extremadamente sencillo. 
+Sin embargo, tras seguir buscando encontramos una librería \citep{acnhnpm} que se podía instalar directamente en Angular que disponía de toda la información que necesitábamos, así como ciertas traducciones e imágenes, por lo que decidimos usar esta librería ya que, no solo nos daba todo lo que necesitábamos sino que ademas su uso era extremadamente sencillo y además nos permitía desechar la idea del administrador, que no nos terminaba de convencer.
 
 \subsection{It. 5 - Código reciclado}
 
